...

    <string name="login_button_message">Login</string>
    <string name="login_register_message">No account yet?</string>
    <string name="login_failed">Email or password not match</string>

    <string name="register_button_message">Register</string>
    <string name="register_failed">Register failed, please try again</string>
    <string name="register_already_exist">Email already exist</string>

    <string name="invalid_username">Email should be in email form</string>
    <string name="empty_username">Email should not be empty</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="empty_confirmation_password">Confirmation Password should not be empty</string>
    <string name="invalid_confirmation_password">Confirmation Password must match with Password</string>
    <string name="empty_name">Name should not be empty</string>
    <string name="system_error">Unexpected system error, please try again</string>

    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="content_add_story">Add story</string>
...
